Fixing a link styling overflow

--- a/css/style.css
+++ b/css/style.css
@@ -8096,9 +8096,11 @@ section p a:hover {
 body {
   font-size: 15px;
 }
-article .field-name-body {
-  margin: 0 72px;
+/* hide for now
+article .field-name-body{
+    margin:0 72px;
 }
+*/
 .view-sponsored-projects a {
   border-bottom: none;
   color: #000000;
@@ -8118,6 +8120,12 @@ article .field-name-body {
 }
 .cf:after {
   clear: both;
+}
+.btn-default:hover,
+.btn-default.active:hover {
+  background: transparent;
+  color: #9900ff;
+  border: solid;
 }
 /**
  * For IE 6/7 only
@@ -8705,11 +8713,13 @@ aside .newsletter #mc_embed_signup input[type="checkbox"] {
   font-weight: 700;
   font-size: 1em;
   color: #ffffff;
+  border: 0;
 }
 .footer #block-boxes-footer-donatelink a:hover {
   color: #ffff00;
   text-decoration: none;
   border-bottom: none;
+  background: 0;
 }
 #block-boxes-footer-sociallinks,
 #boxes-box-footer_sociallinks {
