--- a/less/content.less
+++ b/less/content.less
@@ -1403,10 +1403,11 @@ body{
     font-size: 15px;
 }
 
+/* hide for now
 article .field-name-body{
     margin:0 72px;
 }
-
+*/
 .view-sponsored-projects a{
     border-bottom: none;
     color: #000000;
@@ -1427,6 +1428,12 @@ article .field-name-body{
 
 .cf:after {
     clear: both;
+}
+
+.btn-default:hover, .btn-default.active:hover {
+    background: transparent;
+    color: #9900ff;
+    border: solid;
 }
 
 /**
