--- a/less/footer.less
+++ b/less/footer.less
@@ -29,10 +29,12 @@
             font-weight: 700;
             font-size: 1em;
             color: @footer-fg;
+            border:0;
             &:hover {
                 color: @footer-active;
                 text-decoration: none;
                 border-bottom: none;
+                background:0;
             }
         }
         border: 4px solid #000;
